stopped x overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .App {
@@ -14,6 +14,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -45,8 +46,6 @@ a {
 a:hover {
   text-decoration: underline;
 }
-
-
 
 ul {
   display: flex;
@@ -217,7 +216,6 @@ button:active {
   color: white;
 }
 
-
 /* 
 
 LANDING
@@ -225,7 +223,7 @@ LANDING
 */
 
 #landing {
-  background-color: rgba(115, 66, 214, 0.1)
+  background-color: rgba(115, 66, 214, 0.1);
 }
 
 header {
@@ -254,7 +252,7 @@ header {
   /* Added this after the tutorial to 
   show it over the wave on larger screens */
   z-index: 50;
-  
+
   /* Added this after the tutorial to 
   make landing page responsive on laptops */
   max-height: 50vh;
@@ -412,7 +410,7 @@ FEATURES
 }
 
 .book__price--skeleton {
-  width : 200px;
+  width: 200px;
   height: 19px;
 }
 
@@ -507,7 +505,7 @@ BOOKS PAGE
 
 #books__main {
   flex: 1;
-  background-color: rgb(248,249,250);
+  background-color: rgb(248, 249, 250);
 }
 
 .books__header {
@@ -621,7 +619,7 @@ select {
 }
 
 .book__selected--title {
-  margin-bottom: 8px
+  margin-bottom: 8px;
 }
 
 .book__summary--title {
@@ -716,7 +714,6 @@ select {
   max-height: 128px;
 }
 
-
 .cart__book--info {
   display: flex;
   flex-direction: column;
@@ -763,7 +760,7 @@ select {
 }
 
 .total__item:nth-child(3) {
-    margin-bottom: 24px;
+  margin-bottom: 24px;
 }
 
 .total__sub-total {
@@ -826,7 +823,6 @@ select {
     width: 100%;
   }
 }
-
 
 /* SMALL PHONES, LARGE SMARTPHONES */
 @media (max-width: 550px) {
